Prevent breadcrumbs from shifting inappropriately when following a link with a named-anchor suffix
git-svn-id: http://svn.codehaus.org/geoserver/trunk@13418 ef1d6e69-97e5-0310-af46-8a06194da32a

Former-commit-id: 31a335dbda823f78a8446a9ea2b43f075bb69930 [formerly af05169caf84775711b5cc5bd4009925ba9f8dae]
Former-commit-id: 666b2ed14aa54ef8222fede3b9e91756ffbe0cbe

--- a/doc/en/theme/_static/default.css
+++ b/doc/en/theme/_static/default.css
@@ -140,10 +140,9 @@ background: #fff url(./chrome/main-bg.png) repeat-x;
 
 #content {
 width: 740px; /*790px total*/
-overflow: hidden;
 float: left;
 margin: -3px 0 0 0;
-padding: 1216px 28px 0 22px;
+padding: 16px 28px 0 22px;
 background: #fff url(./chrome/content-bg.png) repeat-x;
 color: #262523;
 font-size: 1.2em;
@@ -292,7 +291,7 @@ Content
 font-size: 0.85em;
 color: #c6e09b;
 border-bottom: 1px solid #c6e09b;
-margin: -1200px 0 1em;
+margin: 0 0 1em;
 padding: 0 0 0.5em;
 }
 
@@ -338,6 +337,10 @@ padding: 0 0.5em;
 
 #content #relatedlinks li.first a {
 padding: 0 0 0 0.5em;
+}
+
+#content .section {
+overflow: hidden;
 }
 
 #content h1 {
